--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -1,5 +1,38 @@
 @import '../shared/mixins';
 
+.umana-form--section {
+  width: 100%;
+  padding: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-family: $font-primary;
+  margin-bottom: 30px;
+  background: $color-white;
+  box-shadow: $shadow;
+  &.simple-form {
+    background: transparent;
+    box-shadow: none;
+    padding: 0;
+    margin-bottom: 0;
+    padding: 0 20px;
+  }
+  .ant-form-item {
+    margin: 0 10px 10px;
+  }
+  & > .umana-form--group {
+    &:first-child {
+      padding-top: 0;
+      border-top: 0;
+      margin-top: 0;
+    }
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid rgba($color-text, 0.2);
+  }
+}
+
 form.ant-form,
 form.ant-form.ant-form-horizontal {
   width: 100%;
