--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -28,3 +28,8 @@
 @import './pages/home/home';
 @import './pages/catalgs';
 @import './pages/jobs';
+
+// theme
+@import './theme/company';
+@import './theme/candidate';
+@import './theme/umana';
