--- a/assets/css/theme/company.scss
+++ b/assets/css/theme/company.scss
@@ -33,7 +33,7 @@
       background: transparent;
       color: $color-green;
     }
-    &.ant-btn.ant-btn-blue.ant-btn-sm,
+    &.ant-btn.ant-btn-orange.ant-btn-sm,
     &.ant-btn-orange {
       background: $color-green;
       &:hover {
