--- a/assets/css/theme/umana.scss
+++ b/assets/css/theme/umana.scss
@@ -28,7 +28,7 @@
       background: transparent;
       color: $color-blue;
     }
-    &.ant-btn.ant-btn-blue.ant-btn-sm,
+    &.ant-btn.ant-btn-orange.ant-btn-sm,
     &.ant-btn-blue {
       background: $color-blue;
       &:hover {
