--- a/assets/css/theme/candidate.scss
+++ b/assets/css/theme/candidate.scss
@@ -29,6 +29,7 @@
       color: $color-orange;
     }
     &.ant-btn.ant-btn-blue.ant-btn-sm,
+    &.ant-btn.ant-btn-orange.ant-btn-sm,
     &.ant-btn-orange {
       background: $color-orange;
       &:hover {
