--- a/assets/css/theme/company.scss
+++ b/assets/css/theme/company.scss
@@ -34,6 +34,7 @@
       color: $color-green;
     }
     &.ant-btn.ant-btn-orange.ant-btn-sm,
+    &.ant-btn.ant-btn-blue.ant-btn-sm,
     &.ant-btn-orange {
       background: $color-green;
       &:hover {
