--- a/assets/css/element/_buttons.scss
+++ b/assets/css/element/_buttons.scss
@@ -13,7 +13,13 @@
     background-color: $color-blue;
     border-color: $color-blue;
     border: 0;
-    height: 50px;
+    height: auto;
+    text-transform: uppercase;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 12px;
+    width: 100%;
+    padding: 10px;
     &:hover {
       background-color: rgba($color-blue, 0.7);
     }
