--- a/assets/css/_info.scss
+++ b/assets/css/_info.scss
@@ -31,12 +31,18 @@ info
       color: $color-black;
     }
     label {
-      font-size: 16px;
-      line-height: 18px;
+      line-height: 1.3;
       color: rgba(52, 52, 52, 0.5);
+      font-size: 14px;
+      @include bp(xmedium) {
+        font-size: 16px;
+      }
     }
     p {
-      font-size: 16px;
+      font-size: 12px;
+      @include bp(xmedium) {
+        font-size: 16px;
+      }
       &::first-letter {
         text-transform: uppercase;
       }
