--- a/assets/css/element/_input.scss
+++ b/assets/css/element/_input.scss
@@ -4,11 +4,14 @@ input.ant-input,
 textarea.ant-input {
   background: $color-white;
   font-family: $font-primary !important;
-  font-size: 14px !important;
   color: $color-text;
   height: 45px;
   margin-bottom: 0;
   color: $color-primary;
+  font-size: 11px;
+  @include bp(xmedium) {
+    font-size: 14px !important;
+  }
   &:hover,
   &:focus,
   &:active {
@@ -268,9 +271,12 @@ div.ant-select-disabled {
 }
 
 .ant-tag {
-  font-size: 16px;
   padding: 5px 10px;
   margin: 5px;
+  font-size: 12px;
+  @include bp(xmedium) {
+    font-size: 16px;
+  }
 }
 
 // Switch
@@ -286,9 +292,12 @@ div.ant-select-disabled {
       width: 50%;
       margin-left: auto;
       color: $color-text;
-      font-size: 14px;
       text-transform: uppercase;
       letter-spacing: 1px;
+      font-size: 11px;
+      @include bp(xmedium) {
+        font-size: 14px;
+      }
     }
     &.ant-switch-checked {
       border: 1px solid $color-primary !important;
