--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -5,6 +5,10 @@
   margin-bottom: 20px;
   position: sticky;
   top: 100px;
+  font-size: 12px !important;
+  @include bp(xmedium) {
+    font-size: 14px !important;
+  }
   &.theme-orange {
     .header-icon {
       background: $color-orange;
