--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -400,9 +400,9 @@ h5 {
       background: $color-green;
       width: 100px !important;
       height: 100px !important;
-      line-height: 100px;
+      line-height: 100px !important;
       @include bp(xmedium) {
-        line-height: 120px;
+        line-height: 120px !important;
         width: 120px !important;
         height: 120px !important;
       }
