--- a/assets/css/theme/candidate.scss
+++ b/assets/css/theme/candidate.scss
@@ -1,5 +1,6 @@
 .app.theme-candidate,
-.profile.theme-candidate {
+.profile.theme-candidate,
+.theme-candidate {
   background: $bg-orange;
   .umana-header,
   .app--header.umana__header.is-login {
@@ -9,8 +10,27 @@
     background: $bg-orange;
   }
   //titles
-  h2 {
-    color: $color-orange;
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    border: 1px solid $color-orange !important;
+    -webkit-text-fill-color: $color-orange;
+    -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+  h2,
+  .ant-steps.ant-steps-horizontal
+    .ant-steps-item.ant-steps-item-process
+    .ant-steps-item-container
+    .ant-steps-item-content
+    .ant-steps-item-title {
+    color: $color-orange !important;
   }
   // themes
   .theme-blue,
@@ -356,4 +376,29 @@
       }
     }
   }
+  // password input
+  .ant-input-password {
+    .ant-input.ant-input-lg {
+      border: 1px solid transparent !important;
+      border-color: transparent !important;
+      border-radius: 0;
+      height: 45px;
+      &:hover,
+      &:focus,
+      &:active {
+        border: 1px solid transparent !important;
+        border-color: transparent !important;
+      }
+    }
+    &:hover,
+    &:focus,
+    &:active {
+      border: 1px solid $color-orange !important;
+      border-color: $color-orange !important;
+    }
+  }
+}
+
+.theme-candidate {
+  background: transparent;
 }
