--- a/assets/css/element/_page-title.scss
+++ b/assets/css/element/_page-title.scss
@@ -45,11 +45,10 @@
     color: #585858;
     @include bp(small) {
       font-size: 28px;
-      margin: 0 5px;
+      margin: 0;
       margin-top: 0;
     }
     @include bp(xmedium) {
-      margin: 0 10px 0 10px;
       font-size: 32px;
     }
     @include bp(large) {
